--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   intl: ^0.19.0
   lottie: ^3.1.2
   animate_do: ^3.3.4
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.7
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
